Bug 1468315 - 'Last seven days' container is missing from history if there are no visits older than 2 days ago. r=Standard8

The query checking which containers should be visible is wrong and skips the day before yesterday.

Differential Revision: https://phabricator.services.mozilla.com/D1725